# PoopLoversOnly698

./: .gitignore  CMakeLists.txt  FLASHING_WINDOWS.md  README.md  imu_driver.c  imu_driver.h  main.c  pico_sdk_import.cmake  sd_logger.c  sd_logger.h  sensor_types.h
build_nopicotool/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rocket_logger.dis  rocket_logger.elf.map  rocket_logger.uf2
build_nopicotool/pico-sdk/: cmake_install.cmake
build_nopicotool/pico-sdk/docs/: cmake_install.cmake
build_nopicotool/pico-sdk/src/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_sync/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_time/: cmake_install.cmake
build_nopicotool/pico-sdk/src/common/pico_util/: cmake_install.cmake
build_nopicotool/pico-sdk/tools/: cmake_install.cmake
tools/: uf2conv.py
(+87 files in other folders)
